# popcorn-compiler

./: .gitignore  .gitmodules  APPLICATIONS  ASLR.md  ASLR_NOTES.md  BUG_REPORTING  Dockerfile  INSTALL  ISSUES  README  README.md  README.popcorn  RYANS_NOTES.md  apt_install_dep.sh  build_docker.sh  env.sh  icp.py  install_compiler.py  popcorn-compiler.diff  signal_trigger.diff
358.botsalgn/Docs/: 358.botsalgn.txt  flags.html
358.botsalgn/Spec/: flags.xml
359.botsspar/Docs/: 359.botsspar.txt  flags.html
359.botsspar/Spec/: flags.xml
CL_Aarch64/: cl_platform.h
Xar-Trek-BIN-SW_EMU/: KNL_Module.xilinx_u50_gen3x16_xdma_201920_3.xclbin
Xar-Trek-Examples/digit-recognition/: Makefile
Xar-Trek-Examples/face-detection/: Makefile
Xar-Trek-Scheduler-Server/: mytimer.c  mytimer.h  popcorn_sched_server.c  xar-trek_sch_server.c
Xar-Trek-Scripts/: Host_App_Gen.sh  KNL_Function.h  KNL_HW_Gen.sh  KNL_Load_Exec_Template.c  KNL_XCLBIN_Gen.sh  Xar-Trek-Run.sh  Xar-Trek-Threshold-Estimator.sh  xar-trek.cfg
apps/: .gitignore
apps/STREAM/: stream.c
apps/blackscholes/: .gitignore
apps/gettimeofday/: prog.c
apps/hello/: prog.c
apps/hermit-argc/: prog.c
apps/hermit-arm-migration/: prog.c
apps/hermit-libelf/: prog.c
apps/hermit-pthread/: prog.c
apps/hermit-rw-heap/: prog.c
apps/hermit-sleep/: prog.c
apps/instrument-functions/: prog.c
apps/livermore/: lloops.c
apps/npb-bt/: bt.c
apps/npb-dc/: extbuild.c  npbparams-A.h
apps/npb-ft/: npbparams-C.h  verify.c
apps/npb-is/: is.c
apps/npb-lu/: .gitignore  npbparams-C.h  npbparams-S.h
apps/npb-mg/: mg.c
apps/npb-ser-c/: compat-list.txt
apps/npb-sp/: npbparams-S.h
apps/on-demand-heap/: launch-test.sh
apps/phoenix-kmeans/: kmeans-seq.c
apps/phoenix-matrix-multiply/: .gitignore  launch.txt
apps/phoenix-pca/: launch.txt
apps/remote-mem/: prog.c
apps/sleep/: Makefile  prog.c
apps/x86-migration-tests/: .gitignore
common/include/: StackTransformTypes.def  arch.h  call_site.h  het_bin.h  platform.h  rewrite_metadata.h
compilation_scripts/: ld  libclang  libclang-arm  popcorn-ar  popcorn-clang  popcorn-clang-no-mig  popcorn-ld  popcorn-lib-clang  popcorn-lib-ld  popcorn-libc-clang  popcorn-libc-clang-arm  popcorn-libc-ld
docker/: Dockerfile  Makefile  README.md  docker-build.sh  readme.md
docker/app/: Makefile  loop.c  test.c
docker/basic/: Makefile  basic.c
docker/pingpong/: Makefile  pingpong.c
example/: Makefile  Makefile.old  Makefile.pierre  run
example/build_aarch64/: map.txt  test_aarch64
example/build_powerpc64/: map.txt  test_powerpc64
example/build_x86_64/: map.txt  test_x86_64
extra_benchmarks/SPEC_OMP2012/: Makefile
lib/: .gitignore
lib/dsm-prefetch/: .gitignore  INSTALL  Makefile  README
lib/htm-abort-prof/: .gitignore  Makefile
lib/htm-checkpoint/: Makefile
lib/libbomp/: .directory  .gitignore  Copyright  (+19 more)
lib/libopenpop/: .Makefile.in.swn  .Makefile.swo  .gitignore  .libgomp.h.swo  .popcorn-config-arm64.sh.swn  .team.c.swn  .team.c.swo  BUILD  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.popcorn  README  TODO  aarch64-config.sh  aclocal.m4  affinity.c  affinity.lo  alloc.lo  arm64_aligned_map.txt  arm64_map.txt  atomic.lo  bar.lo  barrier.lo  config.h  config.h.in  config.status  configure  configure.ac  configure.tgt  critical.lo  env.c  env.lo  error.c  error.lo  fortran.lo  gstdint.h  hierarchy.c  hierarchy.h  (+69 more)
lib/libopenpop/.deps/: affinity.Plo  alloc.Plo  atomic.Plo  bar.Plo  barrier.Plo  critical.Plo  env.Plo  error.Plo  fortran.Plo  icv-device.Plo  icv.Plo  iter.Plo  iter_ull.Plo  kmp.Plo  libgomp-plugin.Plo  lock.Plo  loop.Plo  loop_ull.Plo  mutex.Plo  oacc-async.Plo  oacc-cuda.Plo  oacc-host.Plo  oacc-init.Plo  oacc-mem.Plo  oacc-parallel.Plo  oacc-plugin.Plo  ordered.Plo  parallel.Plo  priority_queue.Plo  proc.Plo  ptrlock.Plo  sections.Plo  sem.Plo  single.Plo  splay-tree.Plo  target.Plo  task.Plo  team.Plo  time.Plo  work.Plo
lib/libopenpop/.libs/: libopenpop.la  libopenpop.lai
lib/libopenpop/config/linux/: bar.c  bar.h  futex.h  lock.c  proc.c  ptrlock.c  ptrlock.h
lib/libopenpop/config/linux/powerpc/: futex.h
lib/libopenpop/config/linux/x86/: futex.h
lib/libopenpop/config/posix/: simple-bar.h
lib/libopenpop/test/barrier/: main.c
lib/libopenpop/test/vector_reduce/: main.c
lib/passes/live_values/: CMakeLists.txt
lib/passes/live_values/src/: LiveValues.cpp  LoopNestingTree.cpp
lib/passes/name_literals/: CMakeLists.txt
lib/passes/name_literals/include/: AssociateLiteral.h
lib/passes/name_literals/src/: AssociateLiteral.cpp
lib/passes/staticvar_sections/: CMakeLists.txt
lib/passes/staticvar_sections/include/: SectionStatic.h
lib/passes/staticvar_sections/src/: SectionStatic.cpp
migration/: INSTALL  Makefile
passes/stack_info/: CMakeLists.txt
passes/stack_info/include/: StackInfo.h
passes/stack_info/src/: StackInfo.cpp
pierre-test/: .gitignore  Makefile  pierre.c  test.c  test.h
pierre-test-python/: Makefile  pierre.c
popcorn_llvm_ppc_patches_backup/: README  Utils.h  llvm-3.7.1.patch
ppc_patches/: CMakeLists.txt  CMakeLists.txt.patch  PPCAsmPrinter.cpp.patch  PPCPatches.patch  PPCSubtarget.h.rej  PowerPC64Values.cpp  PowerPC64Values.cpp.patch  PowerPC64Values.h  PowerPC64Values.h.patch  README  StackMaps.cpp  StackMaps.cpp.patch  StackTransformMetadata.cpp  StackTransformMetadata.cpp.patch  putBack.sh
scheduler/: README.md  copy_proxy.sh  idpool.py  info.csv  install.sh  mountfs.sh  prepare.sh  resume.sh  scheduler.py  source.sh  start_scheduler.sh  tmp-makefile
stack_depth/: Makefile  README  stack-depth-info.py  stack_depth.cpp  stack_depth.h
stack_metadata/: README  process
stack_transformation/: INSTALL  Makefile  README.harubyy
test/: .gitignore  env.py  host.py  kernel.py  repository.py  test_shell  utils.py  vm.py
test_aslr/: Makefile  patch_elf.c  test_bin.c
upopcorn-server/: Makefile  README  common.h  server  server.c
util/: Makefile-riscv.template  Makefile.cxx.template  Makefile.pyalign.3nodes.template  Makefile.pyalign.template  Makefile.template  README  TODO
(+1727 files in other folders)
